--- a/css/interfaz.css
+++ b/css/interfaz.css
@@ -5,13 +5,30 @@
     color-scheme: var(--scheme) !important;
 } */
 
+:root {
+    --primary: #0c2d4f;
+    --blumine: #1e5476;
+    --ming: #3c758b;
+    --cadet-blue: #a2b9c3;
+    --geyser: #d9e2e3;
+}
+
+
 body {
-    background: #83a4d4;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #b6fbff, #83a4d4);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    min-height: 100vh;
+  background: #0c2d4f;
+  background: -webkit-linear-gradient(to right top, #0c2d4f, #103659, #144063, #194a6c, #1e5476);
+  background: linear-gradient(to right top, #0c2d4f, #103659, #144063, #194a6c, #1e5476);
+  background-size: cover;
+  color: white;
+}
+  
+
+p {
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+    line-height: 1.5;
 }
 
 .bg-white {
@@ -21,4 +38,55 @@ body {
 .centrado {
     text-align: center;
     vertical-align: middle;
+}
+
+.contenedor {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.contenedor-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card {
+    flex: 0 1 calc(100% - 1rem);
+    /* padding: 1rem; */
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    background-color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+    .card {
+        flex: 0 1 calc(50% - 1rem);
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .card {
+        flex: 0 1 calc(33% - 1rem);
+    }
+}
+
+.contenido-card {
+    text-align: left;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--primary);
+    padding-left: 1rem;
+    color: white;
+}
+
+.card-container {
+    height: 300px;
+}
+
+.card-container img {
+    width: 100%;
+    height: 100%;
+    /* object-fit: cover; */
 }
