--- a/css/interfaz.css
+++ b/css/interfaz.css
@@ -15,7 +15,7 @@
 
 
 body {
-    min-height: 100vh;
+  min-height: 100vh;
   background: #0c2d4f;
   background: -webkit-linear-gradient(to right top, #0c2d4f, #103659, #144063, #194a6c, #1e5476);
   background: linear-gradient(to right top, #0c2d4f, #103659, #144063, #194a6c, #1e5476);
@@ -41,22 +41,24 @@ p {
 }
 
 .contenedor {
-    max-width: 1100px;
+    /* max-width: 1100px; */
     margin: 0 auto;
 }
 
 .contenedor-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 1rem;
+     /* justify-content: space-evenly; */
+    /* padding-right: 1rem;  */
 }
 
 .card {
     flex: 0 1 calc(100% - 1rem);
-    /* padding: 1rem; */
-    margin-bottom: 1rem;
     text-transform: uppercase;
     background-color: #fff;
+    border: unset;
+    
 }
 
 @media screen and (min-width: 768px) {
@@ -89,4 +91,22 @@ p {
     width: 100%;
     height: 100%;
     /* object-fit: cover; */
+}
+
+.form-container {
+    max-width: 350px;
+}
+
+.general {
+    display: flex;
+}
+
+form {
+    padding: 1rem;
+}
+
+.container-input-capacidad {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
