--- a/css/interfaz.css
+++ b/css/interfaz.css
@@ -78,9 +78,12 @@ p {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: var(--primary);
+    background-color: var(--blumine);
     padding-left: 1rem;
     color: white;
+    height: 40px;
+    display: flex;
+    align-items: center;
 }
 
 .card-container {
