--- a/css/interfaz.css
+++ b/css/interfaz.css
@@ -132,3 +132,60 @@ form {
 ul {
     list-style-type: none;
 }
+
+.card-home {
+    flex: 0 1 calc(100% - 1rem);
+    text-transform: uppercase;
+    background-color: #fff;
+    border: unset;
+    border-radius: 20px;
+}
+
+.container-cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+    .card-home {
+        flex: 0 1 calc(50% - 1rem);
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .card-home {
+        flex: 0 1 calc(25% - 1rem);
+    }
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.container-img {
+    height: 230px;
+}
+
+.container-img img {
+    border-radius: 20px 20px 0px 0px;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 100%;
+}
+
+.card-title {
+    color: #000000;
+}
+
+.card-text {
+    font-size: 14px;
+    color: #000000;
+}
