--- a/css/interfaz.css
+++ b/css/interfaz.css
@@ -134,6 +134,8 @@ ul {
 }
 
 .card-home {
+    display: flex;
+    flex-direction: column;
     flex: 0 1 calc(100% - 1rem);
     text-transform: uppercase;
     background-color: #fff;
@@ -163,9 +165,10 @@ ul {
 .card-body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 1rem;
+    gap: .5rem;
+    margin-bottom: 1rem;
 }
 
 .container-img {
@@ -188,4 +191,7 @@ ul {
 .card-text {
     font-size: 14px;
     color: #000000;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    text-align: center;
 }
