--- a/css/interfaz.css
+++ b/css/interfaz.css
@@ -14,6 +14,10 @@
 }
 
 
+ul {
+    list-style: none;
+}
+
 body {
   min-height: 100vh;
   background: #0c2d4f;
@@ -194,4 +198,10 @@ ul {
     margin-left: 1rem;
     margin-right: 1rem;
     text-align: center;
+}
+
+.form-select {
+    font-size: 13px;
+    overflow-x: auto;
+    min-height: 120px;
 }
