--- a/css/interfaz.css
+++ b/css/interfaz.css
@@ -87,7 +87,8 @@ p {
     /* padding-left: 1rem; */
     padding: 0 1rem;
     color: white;
-    height: 40px;
+    /* height: 40px; */
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
